--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </li>
             </ul>
             <p class="list-item">
-              <i>Additional member (6th or more) KES 5,000 each per year</i>
+              <i>Additional member (6th or more) KES 6,000 each per year</i>
             </p>
           </div>
         </div>
@@ -457,7 +457,7 @@
                       <div class="form-group">
                         <div class="sub-title">
                           <h4 class="text-bold">
-                              2. How do I enrol for Imarisha Afya?
+                              2. How do I buy Imarisha Afya?
                           </h4>
                         </div>
                         <div class="sub-body">
@@ -505,7 +505,7 @@
                             </div>
                             <div class="sub-body">
                               <p>
-                                Yes! Bluewave insurance agency has partnered with Microfinance, SACCO’s, Banks and micro lenders to assist in premium financing for Imarisha Afya. Please call us on 0739599914  for more details. 
+                                Yes! Bluewave insurance agency has partnered with Microfinance and micro lenders to assist in premium financing for Imarisha Afya. Please call us on 0739599914  for more details.
                               </p>
                               <br>
                             </div>
@@ -519,7 +519,7 @@
                               </div>
                               <div class="sub-body">
                                 <p>
-                                    All Kenyan citizens and residents of ages 18- 80 years are eligible for Imarisha Afya. The family members are of ages 0-80.
+                                  All Kenyan citizens and residents who are of ages 18-80 are eligible for Imarisha Afya. The spouses must be of ages 18-80 while the children should be of ages between 0-18. Children of ages  18 years up to 25 years can be included (evidence of schooling must be provided). 
                                 </p>
                                 <br>
                               </div>
@@ -622,7 +622,7 @@
                               </div>
                               <div class="sub-body">
                                 <p>
-                                    There is an extra fee of KES 5,000 payable for every additional family member.
+                                    There is an extra fee of KES 6,000 payable for every additional family member.
                                 </p>
                                 <br>
                               </div>
@@ -636,7 +636,7 @@
                                   </div>
                                   <div class="sub-body">
                                     <p>
-                                        There is a one month waiting Period for Imarisha Afya. The Cover is active once you get your medical card.
+                                        There is a one month waiting Period for Imarisha Afya.
                                     </p>
                                     <br>
                                   </div>
@@ -701,12 +701,26 @@
                                         <div class="form-group">
                                             <div class="sub-title">
                                               <h4 class="text-bold">
-                                                  17. What if the cost of surgery is more than the Inpatient limit?
+                                                  16. What if the cost of surgery is more than the Inpatient limit?
                                               </h4>
                                             </div>
                                             <div class="sub-body">
                                               <p>
                                                   Imarisha Afya can only cater for medical services within the Inpatient limit, should the bill exceed the customer will settle the outstanding amount (through other medical covers or cash).  
+                                              </p>
+                                              <br>
+                                            </div>
+                                          </div>
+
+                                          <div class="form-group">
+                                            <div class="sub-title">
+                                              <h4 class="text-bold">
+                                                  17. Do I have to be registered for NHIF?
+                                              </h4>
+                                            </div>
+                                            <div class="sub-body">
+                                              <p>
+                                                No, you do not have to be registered for NHIF to buy Imarisha Afya. However, you can still have NHIF and Imarisha Afya.
                                               </p>
                                               <br>
                                             </div>
