--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <section class="copyright py-4 text-center text-white">
             <div class="container">
                 <small>Copyright &copy; <a href="https://bluewaveinsurance.co">Bluewave</a> in partnership
-          with <a href="https://kenbright.co.ke">Britam</a>
+          with <a href="https://ke.britam.com/">Britam</a> and <a href="http://www.oaic.org/">OAIC</a>
         </small>
             </div>
         </section>
