--- a/index.html
+++ b/index.html
@@ -63,31 +63,16 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><span style=
-          "color: #21a8d9;"
-      >Pangia</span> Kesho</a
-        >
-        <button
-          class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/OAIC.png"> <span>Pangia Kesho</span></a>
+            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            
-            <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                href="#about"
-                onclick="fbq('track', 'AboutImarishaAfya')"
-                >About</a
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about" onclick="fbq('track', 'AboutImarishaAfya')">About</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
@@ -135,17 +120,12 @@
         </p> -->
         
 
-        <div class="text-center">
-            <p class="font-weight-light mb-0">
-              Pangia Kesho is a unique insurance product for church members offering an in-patient benefit, accidental death cover, accidental total permanent disability cover and a funeral cover
-            </p>
-          <a
-            class="btn btn-xl btn-outline-light mt-4 js-scroll-trigger"
-            href="#about"
-          >
-            Learn More
-          </a>
-        </div>
+            <div class="text-center">
+                <p class="font-weight-light mb-0">
+                Pangia Kesho is a unique insurance product for church members offering an in-patient benefit, accidental death cover, accidental total permanent disability cover and a funeral cover
+                </p>
+                <a class="btn btn-xl btn-outline-light mt-4 js-scroll-trigger" href="#about">Learn More </a>
+            </div>
         </div>
         </header>
 
@@ -252,22 +232,6 @@
         <!-- Portfolio Section -->
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
-                <!-- Portfolio Section Heading -->
-                <!-- <h2
-          class="page-section-heading text-center text-uppercase text-secondary mb-0"
-        >
-          Portfolio
-        </h2> -->
-
-                <!-- Icon Divider -->
-                <!-- <div class="divider-custom">
-          <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon">
-            <i class="fas fa-star"></i>
-          </div>
-          <div class="divider-custom-line"></div>
-        </div> -->
-
                 <!-- Portfolio Grid Items -->
                 <div class="row">
                     <!-- Portfolio Item 1 -->
@@ -328,40 +292,32 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            Senteu Plaza, 6th Floor <br />Galana Rd
-                        </p>
-                    </div>
-
-                    <!-- Footer Contact Us -->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Contact Us</h4>
-                        <p class="lead mb-0">
-                            <b>Phone:</b> <a href="tel: +254739599914">+254739599914</a><br />
-                            <b>Email:</b> <a href="mailto: info@bluewaveinsurance.co">info@bluewaveinsurance.co</a>
+                            Junction of Riara/King'ara Roads <br />Nairobi, Kenya
                         </p>
                     </div>
 
                     <!-- Footer Social Icons -->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/afyaimarisha">
+                        <a class="btn btn-outline-light btn-social mx-1" href="">
                             <i class="fab fa-fw fa-facebook-f"></i>
                         </a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/ImarishaAfya">
+                        <a class="btn btn-outline-light btn-social mx-1" href="">
                             <i class="fab fa-fw fa-twitter"></i>
                         </a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/afyaimarisha">
+                        <a class="btn btn-outline-light btn-social mx-1" href="">
                             <i class="fab fa-fw fa-instagram"></i>
                         </a>
                     </div>
 
                     <!-- Footer About Text -->
-                    <!-- <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Imarisha Afya</h4>
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">OAIC</h4>
                         <p class="lead mb-0">
-                            Imarisha Afya is an annual family Health Cover offered by Bliss Healthcare Ltd in partnership with Bluewave Insurance Agency Ltd.
+                            Organization of African Instituted Churches (OAIC) is the representative body that brings together African Independent and Instituted Churches (AICs), offers them a forum for sharing their concerns and hopes, and enables churches to minister effectively
+                            to the needs of their members and their communities.
                         </p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </footer>
