Added extra members info

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <p class=text-center>
+                            <strong>NB:</strong> For every extra member the premium goes up Ksh 1,400 for option 1 and Ksh 2,000 for option 2 & 3.
+                        </p>
                     </div>
                     <p class="lead2 text-center">
                         Benefits
