optimized background image

--- a/apply.html
+++ b/apply.html
@@ -56,7 +56,7 @@
 </head>
 
 <body>
-  <div class="image-container set-full-height" style="background-image: url('img/african-fam.jpg')">
+  <div class="image-container set-full-height" style="background-image: url('img/african-family.jpg')">
     <a href="./index.html">
       <img style="max-height: 72px;left: 50px;
         position: absolute;
