--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about" onclick="fbq('track', 'AboutImarishaAfya')">About</a>
                     </li>
-                    <li class="nav-item mx-0 mx-lg-1">
+                    <!-- <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://bit.ly/2SqMdSU" onclick="fbq('track', 'ViewTermsAndConditions')">Terms & Conditions</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Apply Now</a>
                     </li>
