updated ASF details and logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/OAIC.png"> <span>Pangia
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/ASF Logo.jpeg"> <span>Pangia
                     Kesho</span></a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -239,10 +239,11 @@
                 </div>
                 <!-- Footer About Text -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">OAIC</h4>
+                    <h4 class="text-uppercase mb-4">Africa Social Finance</h4>
                     <p class="lead mb-0">
-                        Organization of African Instituted Churches (OAIC) is the representative body that brings together African Independent and Instituted Churches (AICs), offers them a forum for sharing their concerns and hopes, and enables churches to minister effectively
-                        to the needs of their members and their communities.
+                        Pangia Kesho is a multi-faceted Program by OAIC-Kenya initiated and technically supported by Africa Social Financing Centre designed to promote economic empowerment of the member churches and congregants through financial inclusion and other social enterprise
+                        programs. A key component of financial inclusion is access to insurance through techonology. This has been made possible through a robust platform designed customized and deployed by Bluewave Insurance Agency, a leading digital
+                        driven insurance intermediary.
                     </p>
                 </div>
             </div>
