--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/ASF Logo.jpeg"> <span>Pangia
-                    Kesho</span></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><span>Pangia Kesho</span></a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -57,9 +56,9 @@
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about" onclick="fbq('track', 'AboutImarishaAfya')">About</a>
                     </li>
-                    <!-- <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://bit.ly/2SqMdSU" onclick="fbq('track', 'ViewTermsAndConditions')">Terms & Conditions</a>
-                    </li> -->
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://bit.ly/3e8LCzu" onclick="fbq('track', 'ViewTermsAndConditions')">Terms & Conditions</a>
+                    </li>
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Apply Now</a>
                     </li>
@@ -219,27 +218,24 @@
             <div class="row">
                 <!-- Footer Location -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Location</h4>
-                    <p class="lead mb-0">
-                        Junction of Riara/King'ara Roads <br />Nairobi, Kenya
-                    </p>
+                    <h5 class="text-uppercase mb-4">Bluewave</h5>
+                    <img src="/assets/img/bw.png" style="width:200px;height:200px;margin-top:10px;">
+
                 </div>
                 <!-- Footer Social Icons -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="">
-                        <i class="fab fa-fw fa-facebook-f"></i>
-                    </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="">
-                        <i class="fab fa-fw fa-twitter"></i>
-                    </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="">
-                        <i class="fab fa-fw fa-instagram"></i>
-                    </a>
+                    <h5 class="text-uppercase mb-4">In partnership with</h5>
+                    <p>
+                        <img src="/img/ASF Logo.jpeg" style="width:200px;height:100px;">
+                    </p>
+                    <p>
+                        <img src="/img/OAIC.png" style="width:200px;height:100px;">
+                    </p>
+
                 </div>
                 <!-- Footer About Text -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Africa Social Finance</h4>
+                    <h5 class="text-uppercase mb-4">Africa Social Finance</h5>
                     <p class="lead mb-0">
                         Pangia Kesho is a multi-faceted Program by OAIC-Kenya initiated and technically supported by Africa Social Financing Centre designed to promote economic empowerment of the member churches and congregants through financial inclusion and other social enterprise
                         programs. A key component of financial inclusion is access to insurance through techonology. This has been made possible through a robust platform designed customized and deployed by Bluewave Insurance Agency, a leading digital
