Added Paybill number

--- a/apply.html
+++ b/apply.html
@@ -874,7 +874,7 @@
             <span class="input-group-addon"> </span>
             <div class="form-group label-floating">
               <h4>Pay via Lipa Na M-Pesa to:</h4>
-              <p>Paybill: <b></b></p>
+              <p>Paybill: <b>584065</b></p>
               <p>Account: <b>${ID}</b></p>
               <p>Amount: <b>KES ${policyAmount.toLocaleString()}</b></p>
             </div>
