Added Britam Logo

--- a/index.html
+++ b/index.html
@@ -218,20 +218,21 @@
             <div class="row">
                 <!-- Footer Location -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h5 class="text-uppercase mb-4">Bluewave</h5>
-                    <img src="/assets/img/bw.png" style="width:200px;height:200px;margin-top:10px;">
-
+                    <h5 class="text-uppercase mb-4">OAIC</h5>
+                    <img src="/img/OAIC.png" style="width:200px;height:100px;">
                 </div>
                 <!-- Footer Social Icons -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h5 class="text-uppercase mb-4">In partnership with</h5>
                     <p>
+                        <img src="/assets/img/britam.png" style="width:200px;height:100px;margin-top:10px;">
+                    </p>
+                    <p>
                         <img src="/img/ASF Logo.jpeg" style="width:200px;height:100px;">
                     </p>
                     <p>
-                        <img src="/img/OAIC.png" style="width:200px;height:100px;">
+                        <img src="/assets/img/bw.png" style="width:150px;height:150px;margin-top:10px;">
                     </p>
-
                 </div>
                 <!-- Footer About Text -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
