Added required fields

--- a/apply.html
+++ b/apply.html
@@ -314,7 +314,7 @@
                           </span>
                           <div class="form-group label-floating">
                             <label for="Front ID upload">ID photo - Front</label>
-                            <input id="file" name="principal_ID_FRONT" type="file" class="form-control" />
+                            <input id="file" name="principal_ID_FRONT" type="file" class="form-control" required/>
                           </div>
                         </div>
                       </div>
@@ -325,7 +325,7 @@
                           </span>
                           <div class="form-group label-floating">
                             <label for="Front ID upload">ID photo - Back</label>
-                            <input id="file2" name="principal_ID_BACK" type="file" class="form-control" />
+                            <input id="file2" name="principal_ID_BACK" type="file" class="form-control" required/>
                           </div>
                         </div>
                       </div>
@@ -336,7 +336,7 @@
                           </span>
                           <div class="form-group label-floating">
                             <label for="Front ID upload">Passport Photo</label>
-                            <input id="file3" name="passport_Photo" type="file" class="form-control" />
+                            <input id="file3" name="passport_Photo" type="file" class="form-control" required/>
                           </div>
                         </div>
                       </div>
@@ -456,7 +456,7 @@
                           </span>
                           <div class="form-group label-floating">
                             <label class="control-label">ID Number</label>
-                            <input id="spouse_id_no" name="spouse_id_no" type="text" class="form-control" />
+                            <input id="spouse_id_no" name="spouse_id_no" type="text" class="form-control" required/>
                           </div>
                         </div>
                       </div>
