--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><span>Pangia Kesho</span></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/OAIC.png"> <span>Pangia Kesho</span></a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -218,8 +218,8 @@
             <div class="row">
                 <!-- Footer Location -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h5 class="text-uppercase mb-4">OAIC</h5>
-                    <img src="/img/OAIC.png" style="width:200px;height:100px;">
+                    <h5 class="text-uppercase mb-4">Bluewave</h5>
+                    <img src="/assets/img/bw.png" style="width:150px;height:150px;margin-top:10px;">
                 </div>
                 <!-- Footer Social Icons -->
                 <div class="col-lg-4 mb-5 mb-lg-0">
@@ -229,9 +229,6 @@
                     </p>
                     <p>
                         <img src="/img/ASF Logo.jpeg" style="width:200px;height:100px;">
-                    </p>
-                    <p>
-                        <img src="/assets/img/bw.png" style="width:150px;height:150px;margin-top:10px;">
                     </p>
                 </div>
                 <!-- Footer About Text -->
