--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/OAIC.png"> <span>Pangia Kesho</span></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/OAIC.png" style="width:200px;height:100px;""> <span>Pangia Kesho</span></a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
