--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col ml-auto">
                     <div style="overflow-x:auto;">
-                        <table class="table">
+                        <table class="table" id="table">
                             <tbody>
                                 <tr style="height: 45px;">
                                     <th style="width: 186px; height: 45px;" colspan="2">Benefits&nbsp;</th>
