--- a/index.html
+++ b/index.html
@@ -245,8 +245,10 @@
     <!-- Copyright Section -->
     <section class="copyright py-4 text-center text-white">
         <div class="container">
-            <small>Powered by <a href="https://bluewaveinsurance.co">Bluewave</a> in partnership
-                with <a href="https://ke.britam.com/">Britam</a> and <a href="http://www.oaic.org/">OAIC</a>
+            <small>The <a href="http://www.oaic.org/">OAIC</a> Pangia Kesho Initiative is arranged by Africa Social Financing Centre,
+            powered by
+            <a href="https://bluewaveinsurance.co">Bluewave Insurance Agency</a> and underwritten by <a
+                href="https://ke.britam.com/">Britam Insurance.</a>
             </small>
         </div>
     </section>
